--- a/style.css
+++ b/style.css
@@ -2,28 +2,55 @@
     box-sizing: border-box;
 }
 
+#body404{
+    text-align:center;
+}
+
+#bg404{
+    display: inline-block;
+    margin: 0 auto;
+    
+    
+}
+#bgImg404{
+    position: relative;
+    margin: 0 auto;
+    max-width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+    margin-bottom: 0;
+    margin-top: 0;
+}
+
+#Msg404{
+    position: absolute;
+    top: 10%;
+    bottom: 10%;
+    left: 10%;
+    right: 90%;
+    width: 50%;
+    margin: 0 auto;
+    font-size:22px;
+}
+
+a#Link404:link{
+    color: mediumblue;
+}
+
+a#Link404:visited{
+    color: blueviolet;
+}
+
 body{
-    background-color: black;
+    background-color: #333333;
 }
 
 .wrapper{
     width: 70%;
     height: 90%;
     margin: auto;
-    background-color: burlywood;
+    background-color: black;
     padding: 10px;
-}
-
-#steamCup{
-    max-width: 70%;
-    margin-left: 15%;
-    margin-right: 15%
-}
-
-#beanCup{
-    max-width: 50%;
-    margin-left: 25%;
-    margin-right: 25%;
 }
 
 header{
@@ -118,21 +145,6 @@ img{
     float: left;
 }
 
-#quote{
-    max-width: 40%;
-    margin-left: 30%;
-    margin-right: 30%;
-}
-
-.picCaptions{
-    margin-left:40%;
-    margin-right:40%;
-    margin-top: 2%;
-    margin-bottom: 2%;
-    text-align: center;
-    font-weight: bold;
-}
-
 aside p{
     margin-top: 5%;
     margin-bottom: 5%;
@@ -149,64 +161,6 @@ aside a{
     font-weight: bold;
 }
 
-#espressoPic{
-    max-width: 60%;
-    margin-left: 20%;
-    margin-right: 20%;
-}
-
-#arabica
-{
-    margin-right: 3%;
-    margin-left: 3%;
-}
-
-#robusta
-{
-    margin-right: 3%;
-    margin-left: 3%;
-    float: right;
-}
-
-#message{
-    max-width: 100%;
-    min-width: 95%;
-}
-
-#reviewHeader{
-    margin-bottom: 0;
-}
-
-h3{
-    margin-bottom: 1%;
-}
-
-#roastBeans{
-    max-width: 36%;
-    margin-left: 32%;
-    margin-right: 32%;
-}
-
-#brewBeans{
-    max-width: 36%;
-    margin-left: 32%;
-    margin-right: 32%;
-}
-
-#berry{
-    max-width: 36%;
-    margin-left: 32%;
-    margin-right: 32%;
-}
-
-li{
-    margin-top: 2%;
-    margin-bottom: 2%;
-    float: left;
-    display: float;
-    align-items: left;
-    list-style-image: url("menuBean.gif")
-}
 ul{
     display: flex;
     float: left;
@@ -236,12 +190,6 @@ ul{
         color: white;
         list-style-image: none;
         list-style-type: none;
-    }
-    
-    #espressoPic{
-        max-width: 40%;
-        margin-left: 30%;
-        margin-right: 30%;
     }
 
 @media only screen and (max-width: 1000px)
